# agentvault

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ORCHESTRATOR_LOW_DOWN.md  README.md  SECURITY.md  run-demo.sh
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-typescript.yml  ci.yml  docker-demo.yml  docker-relay.yml
demo/: README.md  alice-prompt.md  bob-prompt.md  setup.sh
docker/: Dockerfile.demo  Dockerfile.relay  docker-compose.demo.yml
docs/: STATUS.md  api-reference.md  environment-variables.md  execution-environments.md  getting-started.md  model-defaults.md  protocol-spec.md  provider-notes.md  receipt-verification-guide.md  red-team-evaluation-notes.md  red-team-report-2026-02-25.md  relay-dev-setup.md  roadmap.md  schema-versioning-policy.md  testing.md  threat-model.md
docs/architecture/: a2a-extension-spec.md  a2a-integration-spec.md  agentvault-negotiation-protocol.md  contract-receipt-v2.md  demo-integrity-rules.md  ifc-reintegration-proposal.md  negotiation-fixtures.md  negotiation-registry-artefacts.md  negotiation-wire-format.md
docs/archive/: 2026-03-01-status-archive.md  2026-03-05-status-archive.md
docs/guides/: openclaw-vps-runbook.md
schemas/: a2a-extension-params.schema.json  input_payload_compatibility.schema.json  input_payload_dating_compat_v1.schema.json  input_payload_injection_escalation_v1.schema.json  input_payload_scheduling.schema.json  input_payload_scheduling_compat_v1.schema.json
scripts/: build-schema-bundle.sh
(+110 files in other folders)
