[workspace]
resolver = "2"
members = [
    "packages/agentvault-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vcav-io/agentvault"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema validation
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = "thin"
panic = "abort"
strip = true
overflow-checks = true
